<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityPoupanca">

    <ImageView
        android:id="@+id/vtInt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/volar" />


    <LinearLayout
        android:id="@+id/voltarPG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="30dp"
            app:srcCompat="@drawable/poupanca" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/Ivestimento"
            android:layout_marginStart="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ValorInicial"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:layout_marginStart="15dp"
            android:textSize="18dp"/>

        <EditText
            android:id="@+id/valorInicial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="Valor em Ex: 1700.00"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="100dp"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AplicacaoMensal"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:textSize="18dp"/>

        <EditText
            android:id="@+id/valorMensal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="Valor em Ex: 1700.00"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="180dp"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TempoAplicacao"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:textSize="18dp"/>

        <EditText
            android:id="@+id/tempoAplicacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textSize="15dp"
            android:hint="Quantos meses"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="250dp"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TaxaJuros"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:textSize="18dp"/>

        <EditText
            android:id="@+id/taxaJuro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="Ex:0.02"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="250dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TotalAplicacao"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"/>

            <TextView
                android:id="@+id/txtTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="                "
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"/>
        </LinearLayout>


        <Button
            android:id="@+id/btCalcular"
            android:backgroundTint="#009688"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="1dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:text="@string/Calcular" />


    </LinearLayout>
</LinearLayout>