<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityCalculoDeBar">

    <ImageView
        android:id="@+id/voltar"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/volar"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Consumo"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:layout_marginStart="15dp"/>

        <EditText
            android:id="@+id/etconsumo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:inputType="number"
            android:text="    "
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/Cuvert"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etCuver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="      "
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:inputType="number"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DividirConta"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"/>

        <EditText
            android:id="@+id/etNumeroPessoa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="    "
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:inputType="number"/>
    </LinearLayout>

    <Button
        android:id="@+id/btCalcCF"
        android:backgroundTint="#009688"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="1dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:text="@string/CalcularCF"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Taxa"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/txtTaxaServico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="           "
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ContaTotal"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/txtContaTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="                              "
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ValorPP"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/txtValorPorPessoa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:text="          "
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>